Fix background gradient not covering complete page

--- a/react/src/assets/styles/body.css
+++ b/react/src/assets/styles/body.css
@@ -4,11 +4,6 @@
 	box-sizing: border-box;
 }
 
-html,
-body {
-	height: 100%;
-}
-
 body {
 	min-height: 100vh;
 	display: flex;
