--- a/react/src/assets/styles/home.css
+++ b/react/src/assets/styles/home.css
@@ -1,8 +1,3 @@
-.home {
-	display: flex;
-	flex-direction: row;
-}
-
 .main-container {
 	flex: 1 1 auto;
 	transition: margin 400ms cubic-bezier(0.25, 0.8, 0.25, 1);
